[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budgetgate"
version = "0.2.1"
description = "Deterministic, pre-execution spend limiting for semantic actions in agent systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "ActionGate OSS", email = "actiongate-oss@users.noreply.github.com" }
]
keywords = [
    "spend-limiting",
    "budget",
    "ai-agents",
    "llm",
    "cost-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
redis = ["redis>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/actiongate-oss/budgetgate"
Documentation = "https://github.com/actiongate-oss/budgetgate#readme"
Repository = "https://github.com/actiongate-oss/budgetgate"

[tool.hatch.build.targets.wheel]
packages = ["budgetgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
